# gregle

./: .gitignore  README.md  addresses.py  execute.bat  extract.py  ftime.py  gcal.py  gcal_api.py  log.py  main.py  pyproject.toml  requirements.txt  timetable.py
gregle/: __init__.py  __main__.py  cache.py  event.py  log.py  path.py  tz.py
gregle/gcal/: __init__.py  cal.py  event.py  ft.py  service.py
gregle/lu/: __init__.py  address.py  diff.py  event.py  ri.py
res/: README.md
