[project]
name = "gregle"
version = "0.2.0"
dependencies = [
	"google-api-python-client>=2.147.0",
	"google-auth-httplib2>=0.2.0",
	"google-auth-oauthlib>=1.2.1",
	"selenium>=4.25.0",
	"tzdata>=2024.2",
]
requires-python = ">= 3.12"
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools]
py-modules = ["gregle"]
